--- a/index.html
+++ b/index.html
@@ -1,20 +1,226 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <title>Bostrap test</title>
 
+  <title>Hello, world!</title>
 </head>
 
 <body>
+  <h1>Hello, world!</h1>
 
-  coucou
+  <div class="container-xl">100% wide until extra large breakpoint</div>
+  <div class="container-sm">100% wide until small breakpoint</div>
+  <div class="container-md">100% wide until medium breakpoint</div>
+  <div class="container-lg">100% wide until large breakpoint</div>
+  <div class="container-xl">100% wide until extra large breakpoint</div>
 
 
+  <p class="text-primary">.text-primary</p>
+  <p class="text-secondary">.text-secondary</p>
+  <p class="text-success">.text-success</p>
+  <p class="text-danger">.text-danger</p>
+  <p class="text-warning">.text-warning</p>
+  <p class="text-info">.text-info</p>
+  <p class="text-light bg-dark">.text-light</p>
+  <p class="text-dark">.text-dark</p>
+  <p class="text-body">.text-body</p>
+  <p class="text-muted">.text-muted</p>
+  <p class="text-white bg-dark">.text-white</p>
+  <p class="text-black-50">.text-black-50</p>
+  <p class="text-white-50 bg-dark">.text-white-50</p>
+
+  <div class="p-3 mb-2 bg-primary text-white">.bg-primary</div>
+  <div class="p-3 mb-2 bg-secondary text-white">.bg-secondary</div>
+  <div class="p-3 mb-2 bg-success text-white">.bg-success</div>
+  <div class="p-3 mb-2 bg-danger text-white">.bg-danger</div>
+  <div class="p-3 mb-2 bg-warning text-dark">.bg-warning</div>
+  <div class="p-3 mb-2 bg-info text-white">.bg-info</div>
+  <div class="p-3 mb-2 bg-light text-dark">.bg-light</div>
+  <div class="p-3 mb-2 bg-dark text-white">.bg-dark</div>
+  <div class="p-3 mb-2 bg-white text-dark">.bg-white</div>
+  <div class="p-3 mb-2 bg-transparent text-dark">.bg-transparent</div>
+
+  <span class="border"></span>
+  <span class="border-top"></span>
+  <span class="border-right"></span>
+  <span class="border-bottom"></span>
+  <span class="border-left"></span>
+
+  <span class="border border-primary"></span>
+  <span class="border border-secondary"></span>
+  <span class="border border-success"></span>
+  <span class="border border-danger"></span>
+  <span class="border border-warning"></span>
+  <span class="border border-info"></span>
+  <span class="border border-light"></span>
+  <span class="border border-dark"></span>
+  <span class="border border-white"></span>
+
+  <img src="img/a-beauty-product-2566853-1.jpg" alt="..." class="rounded">
+  <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-top">
+  <img src="img/a-beauty-product-2566853-1.jpg" alt="..." class="rounded-right">
+  <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-bottom">
+  <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-left">
+  <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-circle">
+  <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-pill">
+  <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-0">
+
+  <p class="text-left">Left aligned text on all viewport sizes.</p>
+  <p class="text-center">Center aligned text on all viewport sizes.</p>
+  <p class="text-right">Right aligned text on all viewport sizes.</p>
+
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">
+      <font style="vertical-align: inherit;">
+        <font style="vertical-align: inherit;"> Navbar </font>
+      </font>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="# navbarColor01"
+      aria-controls="navbarColor01" aria-extended="false" aria-label="Basculer la navigation ">
+      <span class="navbar-toggler-icon"> </span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">
+            <font style="vertical-align: inherit;">
+              <font style="vertical-align: inherit;"> Accueil </font>
+            </font> <span class="sr-only">
+              <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;"> (courant) </font>
+              </font>
+              </ span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <font style="vertical-align: inherit;">
+              <font style="vertical-align: inherit;"> traits </font>
+            </font>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <font style="vertical-align: inherit;">
+              <font style="vertical-align: inherit;"> Tarification </font>
+            </font>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <font style="vertical-align: inherit;">
+              <font style="vertical-align: inherit;"> Sur </font>
+            </font>
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+            aria-expanded="false">
+            <font style="vertical -align: inherit; ">
+              <font style=" vertical-align: inherit; "> Menu déroulant </font>
+            </font>
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">
+              <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;"> action </font>
+              </font>
+            </a>
+            <a class="dropdown-item" href="#">
+              <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;"> Une autre action </font>
+                </ police>
+            </a>
+            <a class="dropdown-item" href="#">
+              <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;"> Autre choix ici </font>
+                </ police>
+            </a>
+            <div class="dropdown-divider"> </div>
+            <a class="dropdown-item" href="#">
+              <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;"> Lien séparé </font>
+                </ font>
+            </a>
+          </div>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Chercher">
+        <button class="btn btn-secondaire my-2 my-sm-0" type="submit">
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;"> Chercher </font>
+          </font>
+        </button>
+      </form>
+    </div>
+  </nav>
+
+  <button type="button" class="btn btn-outline-primary">
+    <font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;"> Primaire </font>
+      < / font>
+  </button>
+  <button type="button" class="btn btn-outline-secondary">
+    <font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;"> Secondaire </font>
+      < / font>
+  </button>
+  <button type="button" class="btn btn-outline-success">
+    <font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;"> Succès </font>
+      < / font>
+  </button>
+  <button type="button" class="btn btn-outline-info">
+    <font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;"> Info </font>
+      < / font>
+  </button>
+  <button type="button" class="btn btn-outline-warning">
+    <font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;"> avertissement </font>
+      < / font>
+  </button>
+  <button type="button" class="btn btn-outline-danger">
+    <font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;"> Danger </font>
+      < / font>
+  </button>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col">col</div>
+      <div class="col">col</div>
+      <div class="w-100"></div>
+      <div class="col">col</div>
+      <div class="col">col</div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
