--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   <h1>Hello, world!</h1>
 
 
-  <nav class="navbar navbar-dark bg-dark">
-    <!-- Navbar content -->
-  </nav>
+
 
   <nav class="navbar navbar-dark bg-primary">
     <!-- Navbar content -->
@@ -128,21 +126,9 @@
     </form>
   </div>
   </nav>
+  ------------------------------------------------------------------
 
-  <p class="text-primary">.text-primary</p>
-  <p class="text-secondary">.text-secondary</p>
-  <p class="text-success">.text-success</p>
-  <p class="text-danger">.text-danger</p>
-  <p class="text-warning">.text-warning</p>
-  <p class="text-info">.text-info</p>
-  <p class="text-light bg-dark">.text-light</p>
-  <p class="text-dark">.text-dark</p>
-  <p class="text-body">.text-body</p>
-  <p class="text-muted">.text-muted</p>
-  <p class="text-white bg-dark">.text-white</p>
-  <p class="text-black-50">.text-black-50</p>
-  <p class="text-white-50 bg-dark">.text-white-50</p>
-
+  ----------------------------------------------------------------------
   <div class="p-3 mb-2 bg-primary text-white">.bg-primary</div>
   <div class="p-3 mb-2 bg-secondary text-white">.bg-secondary</div>
   <div class="p-3 mb-2 bg-success text-white">.bg-success</div>
@@ -153,13 +139,13 @@
   <div class="p-3 mb-2 bg-dark text-white">.bg-dark</div>
   <div class="p-3 mb-2 bg-white text-dark">.bg-white</div>
   <div class="p-3 mb-2 bg-transparent text-dark">.bg-transparent</div>
-
+  -----------------------------------------------------------
   <span class="border"></span>
   <span class="border-top"></span>
   <span class="border-right"></span>
   <span class="border-bottom"></span>
   <span class="border-left"></span>
-
+  --------------------------------------------------
   <span class="border border-primary"></span>
   <span class="border border-secondary"></span>
   <span class="border border-success"></span>
@@ -169,7 +155,7 @@
   <span class="border border-light"></span>
   <span class="border border-dark"></span>
   <span class="border border-white"></span>
-
+  -------------------------------------------------------------------
   <img src="img/a-beauty-product-2566853-1.jpg" alt="..." class="rounded">
   <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-top">
   <img src="img/a-beauty-product-2566853-1.jpg" alt="..." class="rounded-right">
@@ -178,12 +164,12 @@
   <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-circle">
   <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-pill">
   <img src="img/beautiful-blond-cute-female-235490.jpg" alt="..." class="rounded-0">
-
+  --------------------------------------------------------------
   <p class="text-left">Left aligned text on all viewport sizes.</p>
   <p class="text-center">Center aligned text on all viewport sizes.</p>
   <p class="text-right">Right aligned text on all viewport sizes.</p>
 
-
+  ----------------------------------------------------------------------
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">
       <font style="vertical-align: inherit;">
@@ -229,15 +215,6 @@
     </button>
 
 
-    <div class="container">
-      <div class="row">
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <div class="w-100"></div>
-        <div class="col">col</div>
-        <div class="col">col</div>
-      </div>
-    </div>
 
 
 
@@ -264,3 +241,16 @@
 </body>
 
 </html>
+<img src="img/Additional.png" alt="..." class="rounded">
+
+<div class="row align-items-start">
+  <div class="col">
+    One of three columns
+  </div>
+  <div class="col">
+    One of three columns
+  </div>
+  <div class="col">
+    One of three columns
+  </div>
+</div>
