--- a/index2.html
+++ b/index2.html
@@ -19,39 +19,53 @@
 
   <div class="container">
 
-    <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="#">HOME</a>
-      <a class="navbar-brand" href="#">ABOUT</a>
-      <a class="navbar-brand" href="#">GALORIE</a>
-      <a class="navbar-brand" href="#">CONTACT</a>
+
+    <!-- Navbar content -->
+
+    <nav class="navbar navbar-light bg-dark">
+
+      <button type="button" class="btn btn-outline-warning">
+        <font style="vertical-align: inherit;">
+          <font style="vertical-align: inherit;">
+            <img src="img/Logotype.png" alt="..." class="rounded">@
+      </button>
+
+
+      <button type="button" class="btn btn-outline-info">
+        <font style="vertical-align: inherit;">
+          <font style="vertical-align: inherit;">Home
+
+      </button>
+      <button type="button" class="btn btn-outline-success">
+        <font style="vertical-align: inherit;">
+          <font style="vertical-align: inherit;">ABOUT
+
+      </button>
+      <button type="button" class="btn btn-outline-primary">
+        <font style="vertical-align: inherit;">
+          <font style="vertical-align: inherit;"> GALORIE
+
+      </button>
+      <button type="button" class="btn btn-outline-secondary">
+        <font style="vertical-align: inherit;">
+          <font style="vertical-align: inherit;"> CONTACT
+
+      </button>
+
     </nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
         aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#">
-          <img src="img/Logotype.png" alt="..." class="rounded">
-        </a>
+
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">ABOUT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">GALORIE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">CONTACT</a>
-          </li>
-        </ul>
 
       </div>
     </nav>
@@ -64,17 +78,51 @@
       <div class="col col-2">
       </div>
       <div class="col-md-auto">
-        <img src="img/Additional.png" alt="Responsive image" class="img-fluid">
+
       </div>
       <div class="col col-2">
       </div>
 
-
-      --------------------------------------------
-
-
     </div>
 
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/Additional.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/Additional.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/Additional.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
 
 
@@ -84,7 +132,21 @@
 
   </div>
 
+  <div class="p-3 mb-2 bg-primary text-white">.bg-primary</div>
+  <div class="p-3 mb-2 bg-secondary text-white">.bg-secondary</div>
+  <div class="p-3 mb-2 bg-success text-white">.bg-success</div>
+  <div class="p-3 mb-2 bg-danger text-white">.bg-danger</div>
+  <div class="p-3 mb-2 bg-warning text-dark">.bg-warning</div>
+  <div class="p-3 mb-2 bg-info text-white">.bg-info</div>
+  <div class="p-3 mb-2 bg-light text-dark">.bg-light</div>
+  <div class="p-3 mb-2 bg-dark text-white">.bg-dark</div>
+  <div class="p-3 mb-2 bg-gradient-dark text-dark">.bg-gradient-dark</div>
+  <div class="p-3 mb-2 bg-transparent text-dark">.bg-transparent</div>
 
+
+
+
+  </div>
 
 
 
