--- a/index2.html
+++ b/index2.html
@@ -15,60 +15,11 @@
 
 <body>
 
+  <div id="header"></div>
 
 
   <div class="container  bg-dark text-white">
 
-
-    <!-- Navbar content -->
-
-    <nav class="navbar navbar-light bg-dark">
-
-      <button type="button" class="btn btn-outline-warning">
-        <font style="vertical-align: inherit;">
-          <font style="vertical-align: inherit;">
-            <img src="img/Logotype.png" alt="..." class="rounded">@
-      </button>
-
-
-      <button type="button" class="btn btn-outline-info">
-        <font style="vertical-align: inherit;">
-          <font style="vertical-align: inherit;">Home
-
-      </button>
-      <button type="button" class="btn btn-outline-success">
-        <font style="vertical-align: inherit;">
-          <font style="vertical-align: inherit;">ABOUT
-
-      </button>
-      <button type="button" class="btn btn-outline-primary">
-        <font style="vertical-align: inherit;">
-          <font style="vertical-align: inherit;"> GALORIE
-
-      </button>
-      <button type="button" class="btn btn-outline-secondary">
-        <font style="vertical-align: inherit;">
-          <font style="vertical-align: inherit;"> CONTACT
-
-      </button>
-
-    </nav>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-
-      </div>
-    </nav>
 
 
 
@@ -132,15 +83,15 @@
 
   </div>
 
-  <div class="p-3 mb-2 bg-dark text-white">.bg-dark</div>
 
 
 
 
-  </div>
 
 
 
+
+  <div id="footer"></div>
 
 
 
