--- a/footer.html
+++ b/footer.html
@@ -17,9 +17,11 @@
 <body>
 
   <!-- FOOTER -->
+
   <footer class="container">
     <p class="float-right"><a href="#">Back to top</a></p>
-    <p>&copy; 2017-2020 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+
+    <p>&copy; Sarah-2020 Sirius, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
 
 
