--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
   <div id="header"></div>
 
 
-  <div class="container  bg-dark text-white">
+  <div class="container text-white">
 
 
 
@@ -103,12 +103,8 @@
             commodo.</p>
         </div>
         <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-            role="img" aria-label="Placeholder: 500x500">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
+          <img src="img/Julia.png" alt="..." class="class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+          height="500" rounded">
         </div>
       </div>
 
@@ -122,12 +118,8 @@
             commodo.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-            role="img" aria-label="Placeholder: 500x500">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
+          <img src="img/Julia.png" alt="..." class="class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+          height="500" rounded">
         </div>
       </div>
 
@@ -135,7 +127,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted bg-dark">Checkmate.</span></h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
             semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
             commodo.</p>
@@ -173,12 +165,14 @@
     </div><!-- /.container -->
 
     <!-- Three columns of text below the carousel -->
-    <div style="height: 100px; background-color: rgba(255,0,0,0.1);">
-      <div class="mh-100" style="width: 100px; height: 200px; background-color: rgba(0,0,255,0.1);">Max-height 100%
-      </div>
+
+
+<div class="container-fluid">
+  <div style="height: 100px; background-color: rgba(255,0,0,0.1);">
+    <div class="mh-100" style="width: 100px; height: 200px; background-color: rgba(0,0,255,0.1);">
     </div>
-
-
+  </div>
+</div>
 
 
 
