--- a/index2.html
+++ b/index2.html
@@ -9,23 +9,34 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+ <!-- Scss CSS -->
+ <link rel="stylesheet" href="./css/main.css">
+
 
   <title>Hello, world!</title>
 </head>
 
 <body>
 
+<!-- HEADER
+    ================================================== -->
+    <!-- A inserer apres. -->
   <div id="header"></div>
 
+<!-- CONTAINER MENU
+    ================================================== -->
+    <!-- A inserer apres. -->
 
   <div class="container text-white">
 
 
 
 
+<!-- ROW 1
+    ================================================== -->
+    <!-- A inserer apres. -->
 
-
-    <div class="row justify-content-md-center-light bg-primary ">
+    <!-- <div class="row justify-content-md-center-light bg-primary ">
       <div class="col col-2">
       </div>
       <div class="col-md-auto">
@@ -34,7 +45,13 @@
       <div class="col col-2">
       </div>
 
-    </div>
+    </div> -->
+
+    <!-- CAROUSEL 3
+    ================================================== -->
+    <!-- A inserer apres. -->
+
+
 
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -142,37 +159,208 @@
 
       <!-- /END THE FEATURETTES -->
 
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+
+
+
+    </div><!-- /.container -->
+
+     <!-- / THE ROW -->
+
+    <div class="row">
+      <div class="col-sm-4">
+      </div>
+
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
-    </div><!-- /.container -->
+
+
+      <div class="col-sm-4">
+      </div>
+    </div>
+
+
+
+    <div class="row">
+      <div class="col-sm-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text">.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text">.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
 
     <!-- Three columns of text below the carousel -->
 
 
 <div class="container-fluid">
-  <div style="height: 100px; background-color: rgba(255,0,0,0.1);">
-    <div class="mh-100" style="width: 100px; height: 200px; background-color: rgba(0,0,255,0.1);">
-    </div>
-  </div>
+  <div class="mh-100"></div>
+
 </div>
+
+
+
+<div class="container register">
+  <div class="row">
+      <div class="col-md-3 register-left">
+          <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
+          <h3>Welcome</h3>
+          <p>You are 30 seconds away from earning your own money!</p>
+          <input type="submit" name="" value="Login"/><br/>
+      </div>
+      <div class="col-md-9 register-right">
+          <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+              <li class="nav-item">
+                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Employee</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Hirer</a>
+              </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                  <h3 class="register-heading">Apply as a Employee</h3>
+                  <div class="row register-form">
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <input type="text" class="form-control" placeholder="First Name *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="password" class="form-control" placeholder="Password *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="password" class="form-control"  placeholder="Confirm Password *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <div class="maxl">
+                                  <label class="radio inline">
+                                      <input type="radio" name="gender" value="male" checked>
+                                      <span> Male </span>
+                                  </label>
+                                  <label class="radio inline">
+                                      <input type="radio" name="gender" value="female">
+                                      <span>Female </span>
+                                  </label>
+                              </div>
+                          </div>
+                      </div>
+
+                      <section class="sara">
+                      <div class="col-md-6 ">
+                          <div class="form-group">
+                              <input type="email" class="form-control" placeholder="Your Email *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control" placeholder="Your Phone *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <select class="form-control">
+                                  <option class="hidden"  selected disabled>Please select your Sequrity Question</option>
+                                  <option>What is your Birthdate?</option>
+                                  <option>What is Your old Phone Number</option>
+                                  <option>What is your Pet Name?</option>
+                              </select>
+                          </div>
+                          <div class="form-group">
+                              <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
+                          </div>
+                          <input type="submit" class="btnRegister"  value="Register"/>
+                      </div>
+                  </div>
+              </div>
+              <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                  <h3  class="register-heading">Apply as a Hirer</h3>
+                  <div class="row register-form">
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <input type="text" class="form-control" placeholder="First Name *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="email" class="form-control" placeholder="Email *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="text" maxlength="10" minlength="10" class="form-control" placeholder="Phone *" value="" />
+                          </div>
+
+                        </section>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <input type="password" class="form-control" placeholder="Password *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <select class="form-control">
+                                  <option class="hidden"  selected disabled>Please select your Sequrity Question</option>
+                                  <option>What is your Birthdate?</option>
+                                  <option>What is Your old Phone Number</option>
+                                  <option>What is your Pet Name?</option>
+                              </select>
+                          </div>
+                          <div class="form-group">
+                              <input type="text" class="form-control" placeholder="`Answer *" value="" />
+                          </div>
+                          <input type="submit" class="btnRegister"  value="Register"/>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+</div>
+
+
+
 
 
 
